# ChangeLog for net-im/kadu-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> kadu-core-0.6.0.3.ebuild,
  -kadu-core-0.6.5.ebuild, +kadu-core-0.6.5.1.ebuild, +metadata.xml:
  Bumped. Removed previous version. Some repoman fixes.

  01 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> -kadu-core-0.6.0.2.ebuild,
  +kadu-core-0.6.0.3.ebuild:
  Bumped. Removed previous version.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-core-0.6.5_rc2.ebuild, +kadu-core-0.6.5.ebuild:
  Bumped. Removed previous version.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-core-0.6.5_rc1-r1.ebuild:
  Removed cruft.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.5_rc2.ebuild:
  Bumped.

  17 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-core-0.6.5_rc1.ebuild,
  kadu-core-0.6.5_rc1-r1.ebuild:
  Removed some cruft.

  17 Oct 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-core-0.6.5_rc1-r1.ebuild,
  +files/kadu-core-fix-sound-install-path.patch:
  Added patch to fix sounds install.

  07 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-core-0.6.0.1.ebuild:
  Removed cruft.

  07 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-core-0.6.0.1.ebuild,
  kadu-core-0.6.0.2.ebuild:
  Added "--missing true" to USE gif check , so that it doesn't bomb out with
  qt-3.3.8b.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-core-0.6.0.2.ebuild:
  Bumped.

  23 May 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-core-0.6.0.1.ebuild:
  Changed some logic, so that the build doesn't bomb out during emerge -e world.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-core-0.6.0.ebuild,
  -kadu-core-0.6.0-r1.ebuild:
  Removed cruft.

  05 May 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-core-0.6.0.1.ebuild:
  Bumped.

  13 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-core-0.6.0-r1.ebuild:
  Seems to work just fine, so I'm adding the keywords back.
