@@ -2,7 +2,7 @@ AUX kadu-core-fix-sound-install-path.patch 523 RMD160 ec3699054e38c86fcd257305a7
 AUX misc_opts.patch 2613 RMD160 43311edfe7e877907fa24e9b0ff3b53688246c54 SHA1 a66147b44227df5971b24deb5b32ce07a2ace4b0 SHA256 08d245b130ac04b165d25e45324aab6b47b77e9ac2c1e16d85c06c20d63731a2
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
 DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
-EBUILD kadu-core-0.6.0.3.ebuild 2920 RMD160 d60fd88cc3eab6868f4027438fdedae82816c035 SHA1 b4b22aa2c69207d8e641de8c7c5e237627c060ae SHA256 3265ce516d5f06dc8a36af7b7d7321cc98bae5b912afe919e753d1a9b5144463
+EBUILD kadu-core-0.6.0.3.ebuild 2674 RMD160 684f83b71878d9d2c1a272d76436917d99df306d SHA1 1dacbd17c6c9394f827bbdf89a5dce117d8fbd0a SHA256 4e618144bef38ca6e7f93cf18ced4f9386ece5cc0f74906f71cd065aef3d64a1
 EBUILD kadu-core-0.6.5.1.ebuild 750 RMD160 ba6af06065a5d33b6eebdec7ab7d6d4a014a1115 SHA1 7d688f2ee32a34ffdb8a38d770b987618ecf35c5 SHA256 3f4b605af665f89c3422f40e8b09f9e355e918a255af3dd08963a1b4c2d48677
-MISC ChangeLog 2352 RMD160 0286d9007c2951b06db30e08b0a2ab928d05764e SHA1 b4f0e029b19d1598cda6e85424f3be397551ed30 SHA256 2c2fc0e6b34520b6e36be334d7226185591b17dc203f13afc817d4172630dc1b
+MISC ChangeLog 2462 RMD160 34ec4fc9c7d312d8afd2cb9a692d9ff388e996b3 SHA1 54d32a8c843c86d561a27a25b591ff7a437492a5 SHA256 09999aa7458e52ac5a0d26ea4e22d17238f1a63f5e49a571a09a12f9fc21ff3f
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
