@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> kadu-core-0.6.0.3.ebuild:
+  Always use system-wide libgadu.
+
   25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> kadu-core-0.6.0.3.ebuild,
   -kadu-core-0.6.5.ebuild, +kadu-core-0.6.5.1.ebuild, +metadata.xml:
   Bumped. Removed previous version. Some repoman fixes.
